[gd_scene load_steps=9 format=3 uid="uid://d1wudvik8akhs"]

[ext_resource type="Script" path="res://scenes/menus/gui_menu.gd" id="1_7evsw"]
[ext_resource type="Script" path="res://scenes/menus/gui.gd" id="1_v31k2"]
[ext_resource type="ButtonGroup" uid="uid://bgbsanaoi6b8l" path="res://scenes/menus/layer1buttons.tres" id="2_4bl3u"]
[ext_resource type="Texture2D" uid="uid://diskcll54xu68" path="res://assets/textures/items/item_frame.png" id="2_ffhm7"]

[sub_resource type="Theme" id="Theme_elhrt"]
default_font_size = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g21me"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w82hu"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pohg4"]

[node name="GUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v31k2")

[node name="RaceUI" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ItemMargin" type="MarginContainer" parent="RaceUI"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ItemFrame" type="TextureRect" parent="RaceUI/ItemMargin"]
layout_mode = 2
texture = ExtResource("2_ffhm7")
expand_mode = 3
stretch_mode = 2

[node name="Item" type="TextureRect" parent="RaceUI/ItemMargin"]
layout_mode = 2
expand_mode = 3
stretch_mode = 2

[node name="TimeMargin" type="MarginContainer" parent="RaceUI"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 15

[node name="Time" type="Label" parent="RaceUI/TimeMargin"]
layout_mode = 2
theme = SubResource("Theme_elhrt")
horizontal_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="RaceUI"]
layout_mode = 2

[node name="PlacementMargin" type="MarginContainer" parent="RaceUI"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Placement" type="Label" parent="RaceUI/PlacementMargin"]
layout_mode = 2
theme = SubResource("Theme_elhrt")
horizontal_alignment = 1

[node name="MainMenu" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_bottom = 15

[node name="ButtonsMenu" type="MarginContainer" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="MenuLayers" type="HBoxContainer" parent="MainMenu/ButtonsMenu" node_paths=PackedStringArray("options_buttons")]
layout_mode = 2
theme_override_constants/separation = 0
script = ExtResource("1_7evsw")
layer_1 = ExtResource("2_4bl3u")
options_buttons = NodePath("Layer2/OptionsButtons")

[node name="Layer1" type="MarginContainer" parent="MainMenu/ButtonsMenu/MenuLayers"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MainMenu/ButtonsMenu/MenuLayers/Layer1"]
custom_minimum_size = Vector2(250, 300)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Buttons" type="VBoxContainer" parent="MainMenu/ButtonsMenu/MenuLayers/Layer1"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ResumeGame" type="Button" parent="MainMenu/ButtonsMenu/MenuLayers/Layer1/Buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_g21me")
theme_override_styles/hover = SubResource("StyleBoxFlat_w82hu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w82hu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pohg4")
text = "Resume Game"

[node name="Options" type="Button" parent="MainMenu/ButtonsMenu/MenuLayers/Layer1/Buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_g21me")
theme_override_styles/hover = SubResource("StyleBoxFlat_w82hu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w82hu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pohg4")
toggle_mode = true
button_group = ExtResource("2_4bl3u")
text = "Options"

[node name="Seperator" type="MarginContainer" parent="MainMenu/ButtonsMenu/MenuLayers/Layer1/Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 3

[node name="BottomButtons" type="VBoxContainer" parent="MainMenu/ButtonsMenu/MenuLayers/Layer1/Buttons/Seperator"]
layout_mode = 2
size_flags_vertical = 8

[node name="ExitToLobby" type="Button" parent="MainMenu/ButtonsMenu/MenuLayers/Layer1/Buttons/Seperator/BottomButtons"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_g21me")
theme_override_styles/hover = SubResource("StyleBoxFlat_w82hu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w82hu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pohg4")
text = "Exit to Lobby"

[node name="Leave" type="Button" parent="MainMenu/ButtonsMenu/MenuLayers/Layer1/Buttons/Seperator/BottomButtons"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_g21me")
theme_override_styles/hover = SubResource("StyleBoxFlat_w82hu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w82hu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pohg4")
text = "Leave"

[node name="Layer2" type="MarginContainer" parent="MainMenu/ButtonsMenu/MenuLayers"]
layout_mode = 2
size_flags_vertical = 0

[node name="OptionsButtons" type="MarginContainer" parent="MainMenu/ButtonsMenu/MenuLayers/Layer2"]
visible = false
layout_mode = 2
theme_override_constants/margin_top = 28

[node name="ColorRect" type="ColorRect" parent="MainMenu/ButtonsMenu/MenuLayers/Layer2/OptionsButtons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Buttons" type="VBoxContainer" parent="MainMenu/ButtonsMenu/MenuLayers/Layer2/OptionsButtons"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Exit" type="Button" parent="MainMenu/ButtonsMenu/MenuLayers/Layer2/OptionsButtons/Buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_g21me")
theme_override_styles/hover = SubResource("StyleBoxFlat_w82hu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w82hu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pohg4")
text = "Exit"

[node name="TitleContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_top = 100

[node name="Title" type="Label" parent="MainMenu/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Driftlock"

[connection signal="pressed" from="MainMenu/ButtonsMenu/MenuLayers/Layer1/Buttons/ResumeGame" to="." method="toggle_main_menu_visibility"]
[connection signal="toggled" from="MainMenu/ButtonsMenu/MenuLayers/Layer1/Buttons/Options" to="MainMenu/ButtonsMenu/MenuLayers" method="toggle_layer" binds= ["options_buttons"]]
[connection signal="pressed" from="MainMenu/ButtonsMenu/MenuLayers/Layer1/Buttons/Seperator/BottomButtons/ExitToLobby" to="MainMenu/ButtonsMenu/MenuLayers" method="_on_exit_to_lobby_pressed"]
[connection signal="pressed" from="MainMenu/ButtonsMenu/MenuLayers/Layer1/Buttons/Seperator/BottomButtons/Leave" to="MainMenu/ButtonsMenu/MenuLayers" method="_on_leave_pressed"]
[connection signal="pressed" from="MainMenu/ButtonsMenu/MenuLayers/Layer2/OptionsButtons/Buttons/Exit" to="MainMenu/ButtonsMenu/MenuLayers" method="_on_layer_exit_pressed"]
